syntax = "proto3";

package misc;

option go_package = "miscpb";
option java_multiple_files = true;
option java_outer_classname = "MiscProto";
option java_package = "com.misc";

// import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";

message VersionResponse {
  string commit_hash = 1;
  string short_hash = 2;
  google.protobuf.Timestamp build_date = 3;
  google.protobuf.Timestamp commit_date = 4;
  int64 count = 5;
}

message VersionRequest {}

message HealthResponse {}

message HealthRequest {}

message PubKeyRequest {}

message PubKeyResponse {
  string pub = 1;
}

service MiscSystem {
  rpc Version(VersionRequest) returns (VersionResponse) {
    option (google.api.http) = {
      get: "/v1/misc/version"
    };
  }
  rpc Health(HealthRequest) returns (HealthResponse) {
    option (google.api.http) = {
      get: "/v1/misc/health"
    };
  }
  rpc PublicKey(PubKeyRequest) returns (PubKeyResponse) {
    option (google.api.http) = {
      get: "/v1/misc/pubkey"
    };
  }
}
